--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "express": "^4.16.4",
-    "mongoose": "^5.6.8",
-    "request": "^2.81.0",
-    "socket.io": "^2.2.0"
+    "request": "^2.81.0"
   },
   "devDependencies": {},
   "scripts": {
     "start": "node app.js",
     "test": "repo-tools test app"
   },
-  "author": "",
+  "author": "saccodd",
   "license": ""
 }
